Updated error in title

--- a/dwca_config/eml_metadata/eml_zoobenthos_nat.yaml
+++ b/dwca_config/eml_metadata/eml_zoobenthos_nat.yaml
@@ -10,7 +10,7 @@ additionalMetadata:
                 SHARK - National marine environmental monitoring of Zoobenthos in in Sweden since 1971.
 
 dataset:
-    title: SHARK - National marine environmental monitoring of Zoobenthos in in Sweden since 1971
+    title: SHARK - National marine environmental monitoring of Zoobenthos in Sweden since 1971
 
     abstract:
         para:
