removed dot in title

--- a/dwca_config/eml_metadata/eml_zoobenthos_reg_recip_proj.yaml
+++ b/dwca_config/eml_metadata/eml_zoobenthos_reg_recip_proj.yaml
@@ -10,7 +10,7 @@ additionalMetadata:
                 and Swedish Meteorological and Hydrological Institute et.al.(2022). SHARK - Regional monitoring, recipient control and monitoring projects of zoobenthos in Sweden since 1972
 
 dataset:
-    title: SHARK - Regional marine environmental monitoring, recipient control and monitoring project of Zoobenthos  in Sweden since 1972.
+    title: SHARK - Regional marine environmental monitoring, recipient control and monitoring project of Zoobenthos  in Sweden since 1972
 
     abstract:
         para:
