--- a/dwca_config/field_mapping/dwca_terms_occurrence.yaml
+++ b/dwca_config/field_mapping/dwca_terms_occurrence.yaml
@@ -1,4 +1,3 @@
-
 # A part of the DarwinCore-Archive, DwC-A, generator.
 # GitHub: https://github.com/sharkdata/darwincore
 
@@ -8,8 +7,7 @@ dwcaOccurrenceColumns:
     - occurrenceID
 
     - scientificName
-    - taxonConceptID
-    # - taxonID
+    - taxonID
     - scientificNameID
     - acceptedNameUsage
 
@@ -37,100 +35,98 @@ dwcaOccurrenceColumns:
     - dynamicProperties
 
 dwcaOccurrenceContent:
-    -   eventType: occurrence
-        dwcTerms:
-            id: 
-                dwcaKey: sample_key
-            eventID:
-                dwcaKey: sample_key
-            occurrenceID:
-                dwcaKey: occurrence_key
+    - eventType: occurrence
+      dwcTerms:
+          id:
+              dwcaKey: sample_key
+          eventID:
+              dwcaKey: sample_key
+          occurrenceID:
+              dwcaKey: occurrence_key
 
-            scientificName:
-                sourceKeyList: 
-                    - reported_scientific_name
-                    - scientific_name
-            taxonConceptID:
-                sourceKey: dyntaxa_lsid
-            # taxonID:
-            #    sourceKey: worms_lsid
-            scientificNameID:
-                sourceKeyList:
-                - worms_lsid
-                - worms_id
-                - aphia_id
-            acceptedNameUsage:
-                sourceKey: worms_valid_name
+          scientificName:
+              sourceKeyList:
+                  - reported_scientific_name
+                  - scientific_name
+          taxonID:
+              sourceKey: dyntaxa_lsid
+          scientificNameID:
+              sourceKeyList:
+                  - worms_lsid
+                  - worms_id
+                  - aphia_id
+          acceptedNameUsage:
+              sourceKey: worms_valid_name
 
-            identificationQualifier:
-                sourceKey: species_flag_code
-            sex:
-                sourceKey: sex_code
-            lifeStage:
-                sourceKey: dev_stage_code
-            # individualCount:
-            # organismQuantity:
-            # organismQuantityType:
-            occurrenceStatus:
-                # text: present
-                sourceKey: present_absent
-            preparations:
-                dynamic: 
-                    -   dynamicKey: PreservationMethodCode
-                        sourceKey: preservation_method_code
-            associatedMedia:
-                sourceKey: taxon_photo
-            # associatedReferences:
-            #     sourceKey: 
-            # associatedSequences:
-            #     sourceKey: 
-            taxonRank:
-                sourceKey: worms_rank
-            kingdom:
-                sourceKey: worms_kingdom
-            phylum:
-                sourceKey: worms_phylum
-            class:
-                sourceKey: worms_class
-            order:
-                sourceKey: worms_order
-            family:
-                sourceKey: worms_family
-            genus:
-                sourceKey: worms_genus
-            basisOfRecord:
-                text: MaterialSample
-            recordedBy:
-                sourceKey: taxonomist
-            occurrenceRemarks:
-                sourceKey: 
-            dynamicProperties:
-                dynamic: 
-                    -   dynamicKey: SizeClass
-                        sourceKey: size_class
-                    -   dynamicKey: CellVolume(um3)
-                        sourceKey: reported_cell_volume_um3
-                    -   dynamicKey: SizeClassRangeMin
-                        sourceKey: size_class_range_min
-                    -   dynamicKey: SizeClassRangeMax
-                        sourceKey: size_class_range_max
-                    -   dynamicKey: Epibiont
-                        sourceKey: epibiont
-                    -   dynamicKey: Detached
-                        sourceKey: detached
-                    -   dynamicKey: Recruits
-                        sourceKey: recruits
-                    -   dynamicKey: SharkDataset
-                        sourceKey: dataset_name
-                    #-   dynamicKey: Bitemark
-                    #    sourceKey: bitemark
-                    #-   dynamicKey: DegreeBiofouling
-                    #    sourceKey: degree_biofouling
-                    #-   dynamicKey: AnalyticalLaboratoryCode
-                    #    sourceKey: analytical_laboratory_code
-                    #-   dynamicKey: AnalyticalLaboratoryName
-                    #    sourceKeyList: 
-                    #        - analytical_laboratory_name_en
-                    #        - analytical_laboratory_name_sv
-                    #-   dynamicKey: AnalyticalLaboratoryAccredited
-                    #    sourceKey: analytical_laboratory_accreditated
+          identificationQualifier:
+              sourceKey: species_flag_code
+          sex:
+              sourceKey: sex_code
+          lifeStage:
+              sourceKey: dev_stage_code
+          # individualCount:
+          # organismQuantity:
+          # organismQuantityType:
+          occurrenceStatus:
+              # text: present
+              sourceKey: present_absent
+          preparations:
+              dynamic:
+                  - dynamicKey: PreservationMethodCode
+                    sourceKey: preservation_method_code
+          associatedMedia:
+              sourceKey: taxon_photo
+          # associatedReferences:
+          #     sourceKey:
+          # associatedSequences:
+          #     sourceKey:
+          taxonRank:
+              sourceKey: worms_rank
+          kingdom:
+              sourceKey: worms_kingdom
+          phylum:
+              sourceKey: worms_phylum
+          class:
+              sourceKey: worms_class
+          order:
+              sourceKey: worms_order
+          family:
+              sourceKey: worms_family
+          genus:
+              sourceKey: worms_genus
+          basisOfRecord:
+              text: MaterialSample
+          recordedBy:
+              sourceKey: taxonomist
+          occurrenceRemarks:
+              sourceKey:
+          dynamicProperties:
+              dynamic:
+                  - dynamicKey: SizeClass
+                    sourceKey: size_class
+                  - dynamicKey: CellVolume(um3)
+                    sourceKey: reported_cell_volume_um3
+                  - dynamicKey: SizeClassRangeMin
+                    sourceKey: size_class_range_min
+                  - dynamicKey: SizeClassRangeMax
+                    sourceKey: size_class_range_max
+                  - dynamicKey: Epibiont
+                    sourceKey: epibiont
+                  - dynamicKey: Detached
+                    sourceKey: detached
+                  - dynamicKey: Recruits
+                    sourceKey: recruits
+                  - dynamicKey: SharkDataset
+                    sourceKey: dataset_name
+                  #-   dynamicKey: Bitemark
+                  #    sourceKey: bitemark
+                  #-   dynamicKey: DegreeBiofouling
+                  #    sourceKey: degree_biofouling
+                  #-   dynamicKey: AnalyticalLaboratoryCode
+                  #    sourceKey: analytical_laboratory_code
+                  #-   dynamicKey: AnalyticalLaboratoryName
+                  #    sourceKeyList:
+                  #        - analytical_laboratory_name_en
+                  #        - analytical_laboratory_name_sv
+                  #-   dynamicKey: AnalyticalLaboratoryAccredited
+                  #    sourceKey: analytical_laboratory_accreditated
