Edited title ringed seal

--- a/dwca_config/eml_metadata/eml_ringedseal_nat.yaml
+++ b/dwca_config/eml_metadata/eml_ringedseal_nat.yaml
@@ -8,10 +8,10 @@ additionalMetadata:
                 Swedish Agency for Marine and Water Management,
                 Swedish Environmental Protection Agency and
                 Swedish Meteorological and Hydrological Institute (2022).
-                SHARK - National environmental monitoring of Ringed seal in Sweden since 1995.
+                SHARK - National marine environmental monitoring of Ringed seal in Sweden since 1995.
 
 dataset:
-    title: SHARK - National environmental monitoring of Ringed seal in Sweden since 1995
+    title: SHARK - National marine environmental monitoring of Ringed seal in Sweden since 1995
 
     abstract:
         para:
