--- a/dwca_config/dwca_zooplankton_nat_ices.yaml
+++ b/dwca_config/dwca_zooplankton_nat_ices.yaml
@@ -56,13 +56,13 @@ translate:
     directory:
         data_in/resources
     files:
-        - translate.txt
+       # - translate.txt
         - translate_zooplankton.txt
 
 filters:
     directory:
         data_in/resources
     files:
-        - filters.txt
+        - filters_ices.txt
         - filters_zooplankton_nat.txt
 
