--- a/dwca_config/dwca_epibenthos_nat_ices.yaml
+++ b/dwca_config/dwca_epibenthos_nat_ices.yaml
@@ -62,14 +62,14 @@ translate:
     directory:
         data_in/resources
     files:
-        - translate.txt
+       # - translate.txt
         - translate_epibenthos.txt
 
 filters:
     directory:
         data_in/resources
     files:
-        - filters.txt
+        - filters_ices.txt
         - filters_epibenthos_nat.txt
 
 # metadataSourceFiles:
