--- a/dwca_config/ices_dwca_phytoplankton_nat.yaml
+++ b/dwca_config/ices_dwca_phytoplankton_nat.yaml
@@ -11,7 +11,7 @@ dwcaTarget:
     directory:
         data_out
     files: 
-        - dwca-smhi-phytoplankton-nat_ices_TEST.zip
+        - ices-dwca-smhi-phytoplankton-nat_TEST.zip
 
 sourceFiles:
     directory: 
@@ -55,12 +55,14 @@ translate:
         data_in/resources
     files:
        # - translate.txt
-        - translate_phytoplankton.txt
+       # - translate_phytoplankton.txt
+         - translate_ices_phytoplankton.txt
 
 filters:
     directory:
         data_in/resources
     files:
         - filters_ices.txt
-        - filters_phytoplankton_nat.txt
+       # - filters_phytoplankton_nat.txt
+        - filters_ices_phytobenthos.txt
 
