--- a/dwca_config/ices_dwca_zoobenthos_nat.yaml
+++ b/dwca_config/ices_dwca_zoobenthos_nat.yaml
@@ -11,7 +11,7 @@ dwcaTarget:
     directory:
         data_out
     files: 
-        - dwca-smhi-zoobenthos-nat_ices_TEST.zip
+        - ices-dwca-smhi-zoobenthos-nat_TEST.zip
 
 sourceFiles:
     directory: 
@@ -59,14 +59,17 @@ translate:
         data_in/resources
     files:
        # - translate.txt
-        - translate_zoobenthos.txt
+       # - translate_zoobenthos.txt
+        - translate_ices_zoobenthos.txt
+
 
 filters:
     directory:
         data_in/resources
     files:
         - filters_ices.txt
-        - filters_zoobenthos_nat.txt
+       # - filters_zoobenthos_nat.txt
+        - filters_ices_zoobenthos.txt
 
 # metadataSourceFiles:
 #     directory:
@@ -82,14 +85,14 @@ filters:
 #         - datahost.yaml
 #         - keywords.yaml
 
-metadataTemplate:
-    directory:
-        dwca_config/metadata_templates
-    files: 
-        - yame_zoobenthos_nat_template_sv.json
+#metadataTemplate:
+#    directory:
+#        dwca_config/metadata_templates
+#    files: 
+#        - yame_zoobenthos_nat_template_sv.json
 
-metadataTarget:
-    directory:
-        data_out
-    files: 
-        - yame_zoobenthos_nat_sv.json
+#metadataTarget:
+#    directory:
+#        data_out
+#    files: 
+#        - yame_zoobenthos_nat_sv.json
