--- a/dwca_config/dwca_ices_phytoplankton_nat.yaml
+++ b/dwca_config/dwca_ices_phytoplankton_nat.yaml
@@ -39,9 +39,9 @@ fieldMapping:
     directory:
         dwca_config/field_mapping
     files:
-        - dwca_terms_event.yaml
-        - dwca_terms_occurrence.yaml
-        - dwca_terms_emof.yaml
+         - dwca_ices_terms_event.yaml
+         - dwca_ices_terms_occurrence.yaml
+         - dwca_ices_terms_emof.yaml
 
 taxaWorms:
     directory:
