--- a/dwca_config/dwca_ices_zooplankton_nat.yaml
+++ b/dwca_config/dwca_ices_zooplankton_nat.yaml
@@ -66,6 +66,6 @@ filters:
     files:
         - filters_ices.txt
        # - filters_zooplankton_nat.txt
-        filters_ices_zooplankton.txt
+        - filters_ices_zooplankton.txt
 
 
