--- a/dwca_config/dwca_ices_zooplankton_nat.yaml
+++ b/dwca_config/dwca_ices_zooplankton_nat.yaml
@@ -35,7 +35,7 @@ dwcaKeys:
     directory:
         dwca_config/field_mapping
     files:
-        - dwca_keys.yaml
+        - dwca_ices_keys.yaml
 
 fieldMapping:
     directory:
